# spin-simulation

./: .gitignore  CMakeLists.txt  FORD.md  LICENSE  README.md  fpm.toml
app/: CMakeLists.txt  Ising2d_equilibrium.f  Ising2d_equilibrium.f90  Ising2d_equilibrium_f77.f  Ising2d_equilibrium_f77_withfunc.f  Ising2d_relaxation.f90
doc/: Benchmark.org  results.org
random/: CMakeLists.txt  builtin_rand_m.f90  random_base_m.f90  random_range.f90  xorshift_m.f90
src/: CMakeLists.txt  Ising2d_equilibirum.f90  Ising2d_m.f90  Ising2d_relaxation.f90  Makefile  benchmark_m.f90  utility_m.f90
src/model/: CMakeLists.txt  Ising2d_m.f90
src/model/test/: CMakeLists.txt
src/random/: CMakeLists.txt  builtin_rand_m.f90  random_base_m.f90  xorshift_m.f90
src/random/test/: CMakeLists.txt  test_lcg.f90
src/test/: CMakeLists.txt  Ising2d_test.f90
test/: CMakeLists.txt
test/model/: CMakeLists.txt  test_Ising2d_element.f90  test_Ising2d_lowT.f90  test_Ising2d_norishiro.f90  test_ising2d_equal_orderparams.f90
test/random/: CMakeLists.txt  test_lcg.f90
